2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Only scale if requested.  Add videorate and audiorate.

2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Actually fix the pipeline template.

2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Fix pipeline template.

2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* configure.ac:
	Remove check for twisted version, is implied by the
	flumotion check.

2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.xml:
	Rename freq property to frequency.